# plant-iot

./: .gitignore  README.md  compose.yaml
controller/: Cargo.toml
controller/src/: main.rs
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config.toml
firmware/src/: main.rs
infrastructure/mosquitto/config/: mosquitto.conf
